--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,28 +21,40 @@ import { SITE_TITLE } from '../consts';
 		background: transparent;
 		box-shadow: none;
 	}
+
 	h2 {
 		margin: 0;
 		font-size: 1em;
+		color: white;
 	}
+
 	h2 a,
 	h2 a.active {
 		text-decoration: none;
 		color: white;
 	}
+
 	nav {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
 	}
+
+	.internal-links {
+		display: flex;
+		justify-content: center;
+		flex: 1;
+		gap: 1.5em;
+	}
+
 	nav a {
 		padding: 1em 0.5em;
 		color: white;
 		border-bottom: 4px solid transparent;
 		text-decoration: none;
 	}
+
 	nav a.active {
-		text-decoration: none;
 		border-bottom-color: var(--accent);
 	}
 </style>
