--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -16,6 +16,18 @@ const posts = (await getCollection('blog')).sort(
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 		<style>
+			html, body {
+				height: 100%;
+			}
+			body {
+				margin: 0;
+				background-image: url('/Mountains.png');
+				background-size: cover;
+				background-position: center center;
+				background-repeat: no-repeat;
+				background-attachment: fixed;
+				color: white; /* Makes all text white */
+			}
 			main {
 				width: 960px;
 			}
@@ -33,6 +45,7 @@ const posts = (await getCollection('blog')).sort(
 			ul li * {
 				text-decoration: none;
 				transition: 0.2s ease;
+				color: white; /* Ensures all link text is white */
 			}
 			ul li:first-child {
 				width: 100%;
@@ -54,12 +67,12 @@ const posts = (await getCollection('blog')).sort(
 			}
 			.title {
 				margin: 0;
-				color: rgb(var(--black));
+				color: white; /* White post titles */
 				line-height: 1;
 			}
 			.date {
 				margin: 0;
-				color: rgb(var(--gray));
+				color: white; /* White date text */
 			}
 			ul li a:hover h4,
 			ul li a:hover .date {
